# 68k-NKCEmu

./: .gitignore  68k-nkcemu.c  68k-nkcemu.h  CMakeLists.txt  LICENSE  README.md  bankboot.c  bankboot.h  cas.c  cas.h  cassette.cas  centronics.c  centronics.h  col256.c  col256.h  config.c  config.h  config.yaml  config_43.yaml  config_622.yaml  config_701.yaml  config_710.yaml  contform.ps  crc.c  crc.h  directory.c  directory.h  flo2.c  flo2.h  fpga_timer.c  fpga_timer.h  gdp64.c  gdp64.h  gui_button.c  gui_button.h  gui_file.c  gui_file.h  gui_group.c  gui_group.h  ioe.c  (+27 more)
Musashi/: CMakeLists.txt  m68k.h  m68k_in.c  m68kcpu.h  m68kdasm.c
ayumi/: CMakeLists.txt
cmake/sdl2/: FindSDL2.cmake
docs/: bankboot.md  cas.md  centronics.md  col256.md  cpu68k.md  flo2.md  gdp64k.md  ioe.md  key.md  linux.md  macosx.md  promer.md  ram.md  roa64.md  sound.md  uhr.md  windows.md
resources/cassettes/: quadrat.cas  ziffer.cas
resources/disks/: NKC1CPM68K.img  NKC2CPM68K.img  NKC3CPM68K.img  NKC4CPM68K.img  NKC5CPM68K.img  NKC6CPM68K.img  NKC7CPM68K.img  NKC8CPM68K.img  diskdefs  floppy.img  makedisk.py
resources/roms/: BKBOOT08.ROM  GP710508.ROM  makeprom.py
sertest/: ser  ser.c
tests/: CMakeLists.txt  cas_test.c
